--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@next/font": "^13.1.2",
     "lodash": "^4.17.21",
-    "next": "13.1.1",
+    "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
