--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "svgr": "svgr ./components/svg -d ./components/svg/svgComponents --icon"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.1.2",
+    "@svgr/cli": "^6.5.1",
+    "framer-motion": "^8.4.3",
     "lodash": "^4.17.21",
     "next": "13.1.2",
     "react": "18.2.0",
