--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "svgr": "svgr ./components/svg -d ./components/svg/svgComponents --icon"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.31",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.1.2",
