--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.31",
+    "@formatjs/intl-localematcher": "^0.2.32",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.1.2",
     "@svgr/cli": "^6.5.1",
     "framer-motion": "^8.4.3",
     "lodash": "^4.17.21",
+    "negotiator": "^0.6.3",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
