--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "negotiator": "^0.6.3",
-    "next": "13.4.19",
+    "next": "14.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1"
@@ -28,7 +28,7 @@
     "cross-env": "^7.0.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "postcss": "^8.4.29",
+    "postcss": "8.4.31",
     "tailwindcss": "^3.3.3"
   }
 }
