--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "beta",
+    "@payloadcms/email-nodemailer": "beta",
     "@payloadcms/live-preview-react": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/payload-cloud": "beta",
@@ -42,7 +43,8 @@
     "jsonwebtoken": "9.0.2",
     "lexical": "0.18.0",
     "lucide-react": "^0.378.0",
-    "next": "15.0.4",
+    "next": "15.1.0",
+    "nodemailer": "^6.9.10",
     "payload": "beta",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
