--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@next/third-parties": "^15.1.3",
     "@payloadcms/db-mongodb": "beta",
     "@payloadcms/email-nodemailer": "beta",
     "@payloadcms/live-preview-react": "beta",
@@ -43,7 +44,7 @@
     "jsonwebtoken": "9.0.2",
     "lexical": "0.18.0",
     "lucide-react": "^0.378.0",
-    "next": "15.1.0",
+    "next": "^15.1.3",
     "nodemailer": "^6.9.10",
     "payload": "beta",
     "payload-admin-bar": "^1.0.6",
